feat: replace verifiers for ES256 and RS256
- Replaces verifiers for ES256 and RS256 with non-OpenSSL
  implementation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license = "MPL-2.0"
 [features]
 unsafe_release_without_verify = []
 default = ["openssl"]
+openssl = ["dep:openssl", "const-oid", "p256", "rsa", "sha2", "x509-cert"]
 
 [dependencies]
 serde = { version = "^1.0.136", features = ["derive"] }
@@ -25,6 +26,11 @@ uuid = { version = "^1.0.0", features = ["serde"] }
 tracing = "^0.1.34"
 
 hex = "0.4"
+p256 = { version = "0.13", features = ["jwk"], optional = true }
+x509-cert = { version = "0.2", optional = true }
+const-oid = { version = "0.9", features = ["db"], optional = true }
+rsa = { version = "0.9", optional = true }
+sha2 = { version = "0.10", features = ["oid"], optional = true }
 
 [dev-dependencies]
 tracing-subscriber = "^0.3.11"
