--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,15 +12,14 @@ license = "MPL-2.0"
 
 [features]
 unsafe_release_without_verify = []
-default = ["openssl"]
-openssl = ["dep:openssl", "const-oid", "hmac", "p256", "rand_core", "rsa", "sha2", "x509-cert"]
+default = ["secure"]
+secure = ["const-oid", "hmac", "p256", "rand_core", "rsa", "sha2", "x509-cert"]
 
 [dependencies]
 serde = { version = "^1.0.136", features = ["derive"] }
 serde_json = "^1.0.79"
 base64 = "^0.13.0"
 base64urlsafedata = "0.1.0"
-openssl = { version = "^0.10.38", optional = true }
 url = { version = "^2.2.2", features = ["serde"] }
 uuid = { version = "^1.0.0", features = ["serde"] }
 tracing = "^0.1.34"
